@@ -1,3 +1,8 @@
+2008-06-28  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-protocol.py.in: Set verbose to 5 so messages are printed.
+	(UGAMEProtocolTestCase.testConnectionLost): Added output search.
+
 2008-06-26  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokerchildren.py.in
